       the wrong value. (Stefan)
- BUG: Repobrowser failed to properly detect SVNParentPath
       pages which don't use xml output. (Stefan)
- BUG: Adjusting externals used the wrong revision
       if the external was copied itself but not
       modified later. (Stefan)
- BUG: The manual pre-commit hook script was executed with
       an outdated or empty log message. (Stefan)

Version 1.9.2
- BUG: Performance issue if dragging lots of files
       in the explorer. (Stefan)
- BUG: "Show unified diff" in the log dialog did
       not include the last (lowest) revision. (Stefan)
- BUG: Adjusting externals to the HEAD revision used
       always the same revision if multiple externals were
       selected. (Stefan)
- BUG: "Check all" in project monitor cleared the view. (Stefan)
- BUG: When uninstalling TSVN, files from an installed
       language pack were left. (Stefan)
- BUG: IDiff showed 256x256 icons with wrong size. (Stefan)
- NEW: new library icon for Win10, new overlay icon set
       for Win10. (Stefan)
- CHG: TortoisePlink uses new UX style. (Stefan)
- BUG: "update all" was enabled even if there are no monitored
        working copies in the project monitor. (Stefan)
- CHG: The option "LogFindCopyFrom" is now enabled by default,
       and revisions before the merge branch are grayed. (Stefan)
- BUG: A blame started from the log dialog ignored the blame
       options from the dialog. (Stefan)
- BUG: The option "Reopen dialog after commit if items were
       left uncommitted" was shown as active in the settings
       dialog, even though it was not. (Stefan)

Version 1.9.1
- CHG: static linking to CRT and MFC. (Stefan)
- CHG: Allow the SubWCRevCOM object to be reused, i.e.
       clear all gathered data when GetWCInfo2() is
       called. (Stefan)
- CHG: Update TortoisePlink. (Stefan)
- CHG: Moved all commands to the front view in
       TortoiseMerge. (Stefan)
- CHG: Reintroduce the LogFindCopyFrom setting. (Stefan)